workloads/prod/dummy-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-prod
  namespace: dummy-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dummy-prod
  template:
    metadata:
      labels:
        app: dummy-prod
        terraform: "false"
    spec:
      containers:
      - name: dummy
        image: klimdos/python-flask-dummy
        resources:
          limits:
            memory: "128Mi"
            cpu: "300m"
        ports:
        - containerPort: 8080
